--- a/src/main/webapp/login.css
+++ b/src/main/webapp/login.css
@@ -2,10 +2,11 @@ body {
     font-family: arial, helvetica, sans-serif;
     font-size: 14px;
     color: black;
-    background-color: Silver;
-    margin: 20px;
-    padding: 0;
+    background-image: url('3zycye0y45g01.jpg');
+    background-repeat:no-repeat;
+    background-size:1860px 980px;
 }
+
 
 
 p {
