--- a/src/main/webapp/userlistpage.css
+++ b/src/main/webapp/userlistpage.css
@@ -1,10 +1,7 @@
-caption  {
-    color: white;
-}
 body {
   font-family: "Open Sans", sans-serif;
   line-height: 1.25;
-  background: url("fancy-cushion.png");
+  background: url("image.png");
 }
 table {
   border: 1px solid #ccc;
