--- a/src/main/webapp/register.css
+++ b/src/main/webapp/register.css
@@ -26,6 +26,20 @@ h1 {
     border-bottom: 2px solid #fff;
 }
 
+#message {
+  display:none;
+  background: #f1f1f1;
+  color: #000;
+  position: relative;
+  padding: 20px;
+  margin-top: 10px;
+}
+
+#message p {
+  padding: 10px 35px;
+  font-size: 18px;
+}
+
 header {
     width: 25%;
     margin: 0 auto;
