--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -1,67 +1,77 @@
+html, body {
+    margin: 0 auto;
+}
+
 body {
-    font-family: arial, helvetica, sans-serif;
-    font-size: 14px;
-    color: black;
-    background-image: url('3zycye0y45g01.jpg');
-    background-repeat:no-repeat;
-    background-size:1860px 980px;
+    background: #000 url(LoginBackground.png) top center no-repeat;
+    color: #fff;
+    background-size: cover;
+    font-family: Verdana;
+    width: 100%;
 }
 
-
-
-p {
-    line-height: 21px;
-    display: inline-block;
-
-}
-
-h1 {
-    color: #ffc;
-    background-color: Black;
-    font-size: 3em;
-    margin: 0;
-    margin-bottom: 7px;
-    padding: 4px;
-    font-style: italic;
-    text-align: center;
-    letter-spacing: 0.5em;
-
-}
-
-h2 {
-    color: white;
-    background-color: Purple;
-    font-size: 1.5em;
-    margin: 0;
-    padding: 2px;
-    padding-left: 14px;
-}
-
-h3 {
-    color: White;
-    font-size: 1.25em;
-}
-
-img {
-    border-style: dashed;
-    border-width: 10px;
-    border-color: White;
-}
-
-a {
-    text-decoration: none;
-}
-
-strong {
-    font-style: italic;
+button {
+    margin: 45px 0;
+    width: 20%;
+    background: #db6414;
+    color: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    font-family: inherit;
+    font-weight: bold;
+    font-size: 16px;
     text-transform: uppercase;
 }
 
-li {
-    color: White;
-    font-style: italic;
+button:hover {
+    background: #fff;
+    color: #db6414;
 }
 
-table {
-    background-color: Purple;
+.center-box {
+    width: 1140px;
+    margin: 0 auto;
+    text-align: center;
 }
+
+
+form {
+    width: 80%;
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 45px;
+}
+
+form p {
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+    padding: 10px 35px;
+    font-size: 18px;
+}
+
+form input[type="email"], form input[type="password"]{
+    width: 50%;
+    padding: 10px;
+    margin: 0 0 25px 0;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    color: #333;
+    font-family: inherit;
+    font-size: inherit;
+}
+
+select {
+    color: #000;
+    padding: 10px;
+}
+
+a h2 {
+color: white;
+text-decoration: none !important;
+}
+
+a h2:hover {
+    color: #db6414;
+    text-decoration: none !important;
+}
+
+
