--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -64,12 +64,12 @@ select {
     padding: 10px;
 }
 
-a h2 {
+a {
 color: white;
 text-decoration: none !important;
 }
 
-a h2:hover {
+a:hover {
     color: #db6414;
     text-decoration: none !important;
 }
