--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -71,7 +71,7 @@ text-decoration: none !important;
 
 a:hover {
     color: #db6414;
-    text-decoration: none !important;
+    text-decoration: none !important;.
 }
 
 
