--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -72,6 +72,7 @@ text-decoration: none !important;
 a:hover {
     color: #db6414;
     text-decoration: none !important;
+    text-shadow: 2px 2px #ff0000;
 }
 
 
