--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -48,7 +48,7 @@ form p {
     font-size: 18px;
 }
 
-form input[type="email"], form input[type="password"]{
+form input[type="email"], input[type="password"], input[type = "text"]{
     width: 50%;
     padding: 10px;
     margin: 0 0 25px 0;
