--- a/src/main/webapp/css/curriculum.css
+++ b/src/main/webapp/css/curriculum.css
@@ -3,9 +3,62 @@ html, body {
 }
 
 body {
-    background: url(../images/background.jpg) top center no-repeat;
+    background: url(https://images.homedepot-static.com/productImages/ffc4c2ab-ff7e-4222-9e99-b1ba9a529885/svn/york-wallcoverings-wallpaper-dy0246-64_300.jpg);
     color: #fff;
-    background-size: cover;
     font-family: Verdana;
     width: 100%;
+}
+
+ul {
+list-style-type: none;
+background: #333;
+padding: 10px 10px;
+border-radius: 20px;
+width: 20%;
+margin-left: 10px;
+text-align: center;
+}
+
+ul li {
+    margin: 0 auto;
+    font-size: 20px;
+    line-height: 1.8;
+    border-bottom: 0.5px solid #94918b;
+    padding: 10px 10px;
+    width: 70%;
+}
+
+ul li:last-of-type {
+    border-bottom: none;
+}
+
+ul li a {
+    color: #fff;
+    text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3);
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+ul li:hover {
+    background:  #191f45;
+    border-radius: 20px;
+}
+
+ul li a:hover {
+    background:  #191f45;
+    padding: 10px 10px;
+}
+
+#caption {
+font-size: 48px;
+  color: black;
+  border-bottom: 2px solid gray;
+  border-top: 2px solid gray;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: verdana;
+  margin: 20px auto;
+  text-align: center;
+  width: 30%;
 }
