--- a/src/main/webapp/css/welcome.css
+++ b/src/main/webapp/css/welcome.css
@@ -2,16 +2,21 @@
 .topnav {
   background-color: #333;
   overflow: hidden;
+  border-bottom: 5px solid black;
 }
 
+body {
+    background: url("https://images.homedepot-static.com/productImages/ffc4c2ab-ff7e-4222-9e99-b1ba9a529885/svn/york-wallcoverings-wallpaper-dy0246-64_300.jpg");
+}
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 16px 18px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 20px;
+  font-weight: bold;
 }
 #logout {
   float: right;
@@ -19,12 +24,6 @@
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add a color to the active/current link */
-.topnav a.active {
-  background-color: #4CAF50;
+  background-color: #191f45;
   color: white;
 }
