--- a/src/main/webapp/css/UserInfo.css
+++ b/src/main/webapp/css/UserInfo.css
@@ -3,9 +3,8 @@ html, body {
 }
 
 body {
-    background: url(../images/background.jpg) top center no-repeat;
+    background: url(https://images.homedepot-static.com/productImages/ffc4c2ab-ff7e-4222-9e99-b1ba9a529885/svn/york-wallcoverings-wallpaper-dy0246-64_300.jpg);
     color: #fff;
-    background-size: cover;
     font-family: Verdana;
     width: 100%;
 }
