--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -1,3 +1,27 @@
+h4.modal-title{
+  color:#fff;
+	-webkit-animation-duration: 1s;
+	-webkit-animation-name: glow;
+	-webkit-animation-direction: alternate;
+	-webkit-animation-iteration-count: infinite;
+	animation-duration: 1s;
+	animation-name: glow;
+	animation-direction: alternate;
+	animation-iteration-count: infinite;
+}
+
+h4 {
+    font-size: 45px;
+    font-weight: bold;
+    font-style: italic;
+}
+
+@-webkit-keyframes glow {
+	from { text-shadow: 0 0 0 #aa0f0f; }
+	to { text-shadow: 0 0 80px #f20000; }
+}
+
+
 html, body {
     margin: 0 auto;
 }
