--- a/src/main/webapp/css/subject.css
+++ b/src/main/webapp/css/subject.css
@@ -1,5 +1,4 @@
 body {
-    background: url(https://images.homedepot-static.com/productImages/ffc4c2ab-ff7e-4222-9e99-b1ba9a529885/svn/york-wallcoverings-wallpaper-dy0246-64_300.jpg);
     color: #fff;
     font-family: Verdana;
     width: 100%;
@@ -16,7 +15,7 @@ margin-bottom: 50px;
    height: 100%;
    border-radius: 20px;
    border: 3px solid darkblue;
-   background: url(http://www.bianoti.com/wp-content/uploads/2015/11/Avengers-Backgroundnbspfond-ecran-hd1.jpg) top center no-repeat;
+   background: url(../images/Avengers.jpg) top center no-repeat;
    background-size: cover;
    padding: 10px 20px;
    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.5);
