--- a/src/main/webapp/css/UserInfo.css
+++ b/src/main/webapp/css/UserInfo.css
@@ -1,84 +1,56 @@
-html, body {
-    margin: 0 auto;
-}
-
 body {
-    background: url(https://images.homedepot-static.com/productImages/ffc4c2ab-ff7e-4222-9e99-b1ba9a529885/svn/york-wallcoverings-wallpaper-dy0246-64_300.jpg);
-    color: #fff;
-    font-family: Verdana;
-    width: 100%;
-}
-
-.center-box {
-    width: 1140px;
+    background: #333;
     margin: 0 auto;
 }
 
-h1 {
+#profile {
+    background: url(../images/Avengers.jpg);
+    background-size: cover;
+    border-radius: 20px;
+    border: 3px solid #191f45;
+    color: white;
+    margin: 0 auto;
+    padding:30px 30px;
+    width: 40%;
+    margin-top: 20px;
     text-align: center;
+}
+
+#profile-text {
+    text-align: left;
+    font-size: 20px;
+}
+
+#profile-img img {
+    border-radius: 50%;
+    border: 8px solid #191f45;
+    width: 25%;
+    height: auto;
+}
+
+.name {
     text-transform: uppercase;
-    font-family: Verdana;
-    font-size: 42px;
-    padding: 5px 0;
-    margin: 50px 0;
-    border-top: 2px solid #fff;
-    border-bottom: 2px solid #fff;
-}
-
-#message {
-    display:none;
-    background: #f1f1f1;
-    color: #000;
-    position: relative;
-    padding: 20px;
-    margin-top: 10px;
-}
-
-#message p {
-    padding: 10px 35px;
-    font-size: 18px;
-}
-
-form {
-    text-align: center;
-    margin: 0 auto;
-}
-
-form p {
-    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
-}
-
-form input[type="text"], form input[type="email"], form input[type="password"]{
-    width: 50%;
-    padding: 10px;
-    margin: 0 0 25px 0;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    color: #333;
-    font-family: inherit;
-    font-size: inherit;
-}
-
-button {
-    margin: 45px 0;
-    width: 20%;
-    background: #db6414;
-    color: #fff;
-    padding: 10px;
-    border-radius: 10px;
-    font-family: inherit;
+    font-size: 25px;
     font-weight: bold;
-    font-size: 16px;
-    text-transform: uppercase;
+    text-align: center;
 }
 
-button:hover {
-    background: #fff;
-    color: #db6414;
+.email {
+    padding-bottom: 20px;
+    border-bottom: 1px solid #333;
 }
 
-select {
-    color: #000;
-    padding: 10px;
+#caption {
+  font-size: 48px;
+  color: black;
+  border-bottom: 2px solid gray;
+  border-top: 2px solid gray;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: verdana;
+  margin: 20px auto;
+  margin-bottom: 60px;
+  text-align: center;
+  width: 30%;
 }
 
