--- a/src/main/webapp/css/welcome.css
+++ b/src/main/webapp/css/welcome.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: url("https://images.homedepot-static.com/productImages/ffc4c2ab-ff7e-4222-9e99-b1ba9a529885/svn/york-wallcoverings-wallpaper-dy0246-64_300.jpg");
+    background: url(../images/Welcome.jpg);
     margin: 0px;
 }
 /* Style the links inside the navigation bar */
