--- a/src/main/webapp/css/UserInfo.css
+++ b/src/main/webapp/css/UserInfo.css
@@ -14,6 +14,8 @@ body {
     width: 40%;
     margin-top: 20px;
     text-align: center;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 #profile-text {
@@ -53,4 +55,3 @@ body {
   text-align: center;
   width: 30%;
 }
-
