--- a/src/main/webapp/css/welcome.css
+++ b/src/main/webapp/css/welcome.css
@@ -1,7 +1,6 @@
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: #333;
-  overflow: hidden;
   border-bottom: 5px solid black;
 }
 
@@ -19,6 +18,7 @@ body {
   font-size: 20px;
   font-weight: bold;
 }
+
 #logout {
   float: right;
 }
@@ -28,3 +28,56 @@ body {
   background-color: #191f45;
   color: white;
 }
+
+/* Dropdown Button */
+.dropbtn {
+  background-color: #333;
+  color: white;
+  padding: 16px 18px;
+  font-size: 20px;
+  font-weight: bold;
+  border: none;
+}
+
+.dropbtn:hover {
+  background-color: #191f45;
+  color: white;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  text-align: center;
+  background-color: #191f45;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: white;
+  background-color: #333;
+  padding: 12px 16px;
+  text-decoration: none;
+  text-align: center;
+  margin: 0 auto;
+  display: block;
+  width: 100%;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #191f45; text-align: center;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #191f45;}
