--- a/src/main/webapp/css/assignment.css
+++ b/src/main/webapp/css/assignment.css
@@ -20,7 +20,7 @@ input {
     border-radius: 10px;
     padding: 15px;
 }
-button {
+button.submit {
     margin: 45px 15px;
     width: 20%;
     background: #333;
@@ -44,19 +44,6 @@ button:hover {
     text-align: center;
 }
 
-
-form {
-    width: 80%;
-    text-align: center;
-    margin: 0 auto;
-    padding-top: 45px;
-}
-
-form p {
-    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
-    padding: 10px 35px;
-    font-size: 18px;
-}
 
 form input[type="email"], input[type="password"], input[type = "text"]{
     width: 50%;
@@ -82,7 +69,3 @@ form input[type="email"], input[type="password"], input[type = "text"]{
     text-align: center;
     width: 30%;
 }
-
-
-
-
