--- a/src/main/webapp/css/subject.css
+++ b/src/main/webapp/css/subject.css
@@ -36,3 +36,39 @@ p {
    text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3);
    }
 
+#h2 {
+   margin: 5px;
+   font-size: 30px;
+}
+
+#aButton {
+   margin: 45px 15px;
+   width: 20%;
+   background: #333;
+   color: #fff;
+   padding: 10px;
+   border-radius: 10px;
+   font-family: inherit;
+   font-weight: bold;
+   font-size: 15px;
+   text-transform: uppercase;
+}
+
+.center-boxI {
+   width: 1000px;
+   margin: 30px auto;
+   text-align: center;
+}
+
+.center-boxII {
+   margin: 30px auto;
+   text-align: center;
+}
+
+#tarea {
+   padding: 10px;
+   border-radius: 10px;
+   width: 70%;
+   height: 250px;
+}
+
