init sql updated, subject css updated.

--- a/src/main/webapp/css/subject.css
+++ b/src/main/webapp/css/subject.css
@@ -54,6 +54,10 @@ p {
    text-transform: uppercase;
 }
 
+#aButton:hover {
+   background: #191f45;
+   color: white;
+}
 .center-boxI {
    width: 1000px;
    margin: 30px auto;
